--- a/Template/styles/header.css
+++ b/Template/styles/header.css
@@ -152,7 +152,7 @@
   }
 
   .nav-subcategory {
-      @apply w-auto absolute mt-6 px-1 py-1 border-2 border-black rounded-lg flex flex-col bg-gray-300 items-center justify-center text-indigo-600;
+      @apply w-auto dark:text-purple-400 absolute mt-6 px-1 py-1 border-2 dark:border-transparent border-black rounded-lg flex flex-col bg-gray-300 items-center justify-center text-indigo-600;
   }
 
   .category-button {
